# minha

./: .env  ANEM_AUTOMATION_README.md  anem_automation.py  fetch.py  main.py  pyproject.toml  requirements.txt  run.bat  run_project.bat
